@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-07T16:06:34Z",
+  "timestamp" : "2024-01-11T00:31:28Z",
   "count_outdated" : 2221,
   "uniques_outdated" : 703,
-  "count" : 2229,
-  "uniques" : 710,
+  "count" : 2252,
+  "uniques" : 713,
   "views" : [
     {
       "timestamp": "2023-12-28T00:00:00Z",
@@ -67,6 +67,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-10T00:00:00Z",
+      "count": 23,
+      "count_minmax": [ 23, 23 ],
+      "count_decinc": [ 0, 23 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
