@@ -1,6 +1,6 @@
 {
-  "count": 8,
-  "uniques": 7,
+  "count": 31,
+  "uniques": 8,
   "views": [
     {
       "timestamp": "2023-12-28T00:00:00Z",
@@ -36,6 +36,11 @@
       "timestamp": "2024-01-07T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2024-01-10T00:00:00Z",
+      "count": 23,
+      "uniques": 3
     }
   ]
 }
